Fix: Improved Logo Visibility on Navbar for Mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,6 +512,10 @@ textarea.form-control {
   display: contents!important;
 }
 
+.navbar-brand {
+  width: 60%;
+  height: 60%;
+}
 
 @media (min-width: 580px){
   .flexi-founder{
@@ -523,6 +527,14 @@ textarea.form-control {
     display: flex!important;
   }
 }
+
+@media (min-width: 768px){
+  .navbar-brand {
+    width: 25%;
+    height: 25%;
+  }s
+}
+
 
 li[role="presentation"] {
   margin: 0 0.25rem;
@@ -610,10 +622,7 @@ li.slick-active button {
   background: var(--light-bg-color);
 }
 
-.navbar-brand {
-  width: 25%;
-  height: 25%;
-}
+
 
 @media (max-width: 991px) {
   .navbar .dropdown-menu {
